Working timestamp show and nested directory content listing

--- a/views/videos.pug
+++ b/views/videos.pug
@@ -9,8 +9,8 @@ block content
     ul
       each video_file in video_files
         li
-          a(href="/videos?video_file=" + video_file)
-            =video_file
+          a(href="/videos?video_file=" + video_file.name)
+            =video_file.name + " " + video_file.time
 
   video(id="my-video" class="video-js" controls preload="auto" width="640" height="360" data-setup="{}")
     source(id="my-video-src" src="" type="video/mp4")/
@@ -34,24 +34,21 @@ block content
         if (!results[2]) return '';
         return decodeURIComponent(results[2].replace(/\+/g, ' '));
     }
-    function myFunction() {
-      // Display the current position of the audio in a p element with id="demo"
-      document.getElementById("demo").innerHTML = aud.currentTime;
-    }
+
     let video_src = getParameterByName("video_file");
 
     document.getElementById("my-video-src").setAttribute("src",`/videos/${video_src}`);
 
-    videojs('my-video').ready(function() {
+    var aud = videojs('my-video');
+
+    aud.ready(function() {
       this.hotkeys({
         volumeStep: 0.1,
-        seekStep: 5,
+        seekStep: 15,
         enableModifiersForNumbers: false
       });
+      this.on('timeupdate', function () {
+        console.log(this.currentTime());
+        document.getElementById("demo").innerHTML = this.currentTime();
+      })
     });
-
-    // Get the audio element with id="my-video"
-    var aud = document.getElementById("my-video");
-
-    // Assign an ontimeupdate event to the audio element, and execute a function if the current playback position has changed
-    aud.ontimeupdate = function() {myFunction()};
