--- a/views/videos.pug
+++ b/views/videos.pug
@@ -34,6 +34,28 @@ block content
         if (!results[2]) return '';
         return decodeURIComponent(results[2].replace(/\+/g, ' '));
     }
+    function setCookie(name,value,days) {
+        var expires = "";
+        if (days) {
+            var date = new Date();
+            date.setTime(date.getTime() + (days*24*60*60*1000));
+            expires = "; expires=" + date.toUTCString();
+        }
+        document.cookie = name + "=" + (value || "")  + expires + "; path=/";
+    }
+    function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for(var i=0;i < ca.length;i++) {
+            var c = ca[i];
+            while (c.charAt(0)==' ') c = c.substring(1,c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+        }
+        return null;
+    }
+    function eraseCookie(name) {
+        document.cookie = name +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+    }
 
     let video_src = getParameterByName("video_file");
 
@@ -42,13 +64,18 @@ block content
     var aud = videojs('my-video');
 
     aud.ready(function() {
+      let played_till = getCookie(video_src);
+      if (played_till) {
+          this.currentTime(played_till);
+      }
       this.hotkeys({
         volumeStep: 0.1,
         seekStep: 15,
         enableModifiersForNumbers: false
       });
       this.on('timeupdate', function () {
-        console.log(this.currentTime());
         document.getElementById("demo").innerHTML = this.currentTime();
+        setCookie(video_src, this.currentTime());
       })
     });
+
